update supplementary material

--- a/paper/r-references.bib
+++ b/paper/r-references.bib
@@ -192,3 +192,13 @@
   note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
+@Article{R-bayesplot,
+  title = {Visualization in Bayesian workflow},
+  author = {Jonah Gabry and Daniel Simpson and Aki Vehtari and Michael Betancourt and Andrew Gelman},
+  year = {2019},
+  journal = {J. R. Stat. Soc. A},
+  volume = {182},
+  issue = {2},
+  pages = {389-402},
+  doi = {10.1111/rssa.12378},
+}
