--- a/paper/library.bib
+++ b/paper/library.bib
@@ -38,6 +38,76 @@
   publisher={American Association for the Advancement of Science}
 }
 
+@misc{fortier_kellier_flecha_frank_2018,
+ title={Ad-hoc pragmatic implicatures among Shipibo-Konibo children in the Peruvian Amazon},
+ url={psyarxiv.com/x7ad9},
+ DOI={10.31234/osf.io/x7ad9},
+ publisher={PsyArXiv},
+ author={Fortier, Martin and Kellier, Danielle and Flecha, Mari F and Frank, Michael C},
+ year={2018},
+ month={May}
+}
+
+@misc{zhao_ren_frank_zhou_2019,
+ title={The Development of Quantity Implicatures in Mandarin-Speaking Children},
+ url={psyarxiv.com/e8qc5},
+ DOI={10.31234/osf.io/e8qc5},
+ publisher={PsyArXiv},
+ author={Zhao, Shuyan and Ren, Jie and Frank, Michael C and Zhou, Peng},
+ year={2019},
+ month={Oct}
+}
+
+@article{horowitz2015young,
+  title={Young children’s developing sensitivity to discourse continuity as a cue for inferring reference},
+  author={Horowitz, Alexandra C and Frank, Michael C},
+  journal={Journal of Experimental Child Psychology},
+  volume={129},
+  pages={84--97},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{matthews2010s,
+  title={What's in a manner of speaking? Children's sensitivity to partner-specific referential precedents.},
+  author={Matthews, Danielle and Lieven, Elena and Tomasello, Michael},
+  journal={Developmental Psychology},
+  volume={46},
+  number={4},
+  pages={74--760},
+  year={2010},
+  publisher={American Psychological Association}
+}
+
+@article{koymen2014young,
+  title={Young children create partner-specific referential pacts with peers.},
+  author={K{\"o}ymen, Bahar and Schmerse, Daniel and Lieven, Elena and Tomasello, Michael},
+  journal={Developmental Psychology},
+  volume={50},
+  number={10},
+  pages={2334--2342},
+  year={2014},
+  publisher={American Psychological Association}
+}
+
+@article{khu2019preschoolers,
+  title={Preschoolers Flexibly Shift Between Speakers' Perspectives During Real-Time Language Comprehension},
+  author={Khu, Melanie and Chambers, Craig G and Graham, Susan A},
+  journal={Child Development},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{san2015new,
+  title={A new perspective on children's communicative perspective taking: When and how do children use perspective inferences to inform their comprehension of spoken language?},
+  author={San Juan, Valerie and Khu, Melanie and Graham, Susan A},
+  journal={Child Development Perspectives},
+  volume={9},
+  number={4},
+  pages={245--249},
+  year={2015},
+  publisher={Wiley Online Library}
+}
 
 @article{akhtar1996role,
   title={The role of discourse novelty in early word learning},
@@ -119,7 +189,10 @@
   title={The pervasive role of pragmatics in early language},
   journal={Annual Review of Developmental Psychology},
   author={Bohn, Manuel and Frank, Michael C.},
-  year={in press}
+volume = {1},
+number = {1},
+pages = {223-249},
+year = {2019}
 }
 
 
@@ -188,6 +261,17 @@
   number={1},
   pages={e12702},
   year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{sullivan2016discourse,
+  title={Discourse bootstrapping: Preschoolers use linguistic discourse to learn new words},
+  author={Sullivan, Jessica and Barner, David},
+  journal={Developmental science},
+  volume={19},
+  number={1},
+  pages={63--75},
+  year={2016},
   publisher={Wiley Online Library}
 }
 
@@ -336,6 +420,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{akhtar2002relevance,
+  title={Relevance and early word learning},
+  author={Akhtar, Nameera},
+  journal={Journal of Child Language},
+  volume={29},
+  number={3},
+  pages={677--686},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+
 @incollection{landy2011ideal,
   title={Ideal-observer models of cue integration},
   author={Landy, Michael S and Banks, Martin S and Knill, David C},
@@ -392,13 +487,90 @@
 
 @article{saylor2011s,
   title={What’s mine is mine: twelve-month-olds use possessive pronouns to identify referents},
-  author={Saylor, Megan M and Ganea, Patricia A and V{\'a}zquez, Maria D},
+  author={Saylor, Megan M and Ganea, Patricia and V{\'a}zquez, Maria D},
   journal={Developmental Science},
   volume={14},
   number={4},
   pages={859--864},
   year={2011},
   publisher={Wiley Online Library}
+}
+
+@article{saylor2007infants,
+  title={Infants interpret ambiguous requests for absent objects.},
+  author={Saylor, Megan M and Ganea, Patricia},
+  journal={Developmental Psychology},
+  volume={43},
+  number={3},
+  pages={696--704},
+  year={2007},
+  publisher={American Psychological Association}
+}
+
+
+@article{ganea2007infants,
+  title={Infants' use of shared linguistic information to clarify ambiguous requests},
+  author={Ganea, Patricia and Saylor, Megan M},
+  journal={Child Development},
+  volume={78},
+  number={2},
+  pages={493--502},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+@article{hartshorne2015development,
+  title={Development of the first-mention bias},
+  author={Hartshorne, Joshua K and Nappa, Rebecca and Snedeker, Jesse},
+  journal={Journal of child language},
+  volume={42},
+  number={2},
+  pages={423--446},
+  year={2015},
+  publisher={Cambridge University Press}
+}
+
+@article{song2005s,
+  title={Who’s “she”? Discourse prominence influences preschoolers’ comprehension of pronouns},
+  author={Song, Hyun and Fisher, Cynthia},
+  journal={Journal of Memory and Language},
+  volume={52},
+  number={1},
+  pages={29--57},
+  year={2005},
+  publisher={Elsevier}
+}
+
+
+@article{fisher2020developmental,
+  title={The developmental origins of syntactic bootstrapping},
+  author={Fisher, Cynthia and Jin, Kyong-sun and Scott, Rose M},
+  journal={Topics in Cognitive Science},
+  volume={12},
+  pages={48--77},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{yuan2009really,
+  title={“Really? She blicked the baby?” Two-year-olds learn combinatorial facts about verbs by listening},
+  author={Yuan, Sylvia and Fisher, Cynthia},
+  journal={Psychological Science},
+  volume={20},
+  number={5},
+  pages={619--626},
+  year={2009},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{lidz2003infants,
+  title={What infants know about syntax but couldn't have learned: experimental evidence for syntactic structure at 18 months},
+  author={Lidz, Jeffrey and Waxman, Sandra and Freedman, Jennifer},
+  journal={Cognition},
+  volume={89},
+  number={3},
+  pages={295--303},
+  year={2003},
+  publisher={Elsevier}
 }
 
 @article{stiller2015ad,
@@ -482,6 +654,16 @@
   number = {1},
   pages = {1--48},
   doi = {10.18637/jss.v067.i01},
+}
+
+@misc{bohn_tessler_merrick_frank_2019,
+ title={Predicting pragmatic cue integration in adults’ and children’s inferences about novel word meanings},
+ url={psyarxiv.com/xma4f},
+ DOI={10.31234/osf.io/xma4f},
+ publisher={PsyArXiv},
+ author={Bohn, Manuel and Tessler, Michael H and Merrick, Megan and Frank, Michael C},
+ year={2019},
+ month={Sep}
 }
 
 
@@ -586,7 +768,6 @@
   volume = {10},
   number = {1},
   pages = {395--411},
-  doi = {10.32614/RJ-2018-017},
   encoding = {UTF-8},
 }
 @Article{R-coda,
