--- a/paper/r-references.bib
+++ b/paper/r-references.bib
@@ -202,3 +202,20 @@
   pages = {389-402},
   doi = {10.1111/rssa.12378},
 }
+@Manual{R-ggridges,
+  title = {ggridges: Ridgeline Plots in 'ggplot2'},
+  author = {Claus O. Wilke},
+  year = {2020},
+  note = {R package version 0.5.2},
+  url = {https://CRAN.R-project.org/package=ggridges},
+}
+@Book{R-knitr,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.name/knitr/},
+}
