--- a/paper/library.bib
+++ b/paper/library.bib
@@ -1,3 +1,56 @@
+@article{luong2013parsing,
+  title={Parsing entire discourses as very long strings: Capturing topic continuity in grounded language learning},
+  author={Luong, Minh-Thang and Frank, Michael C and Johnson, Mark},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={1},
+  pages={315--326},
+  year={2013},
+  publisher={MIT Press}
+}
+
+@article{su2013scalar,
+  title={Scalar implicatures and downward entailment in child Mandarin},
+  author={Su, Yi Esther},
+  journal={Journal of East Asian Linguistics},
+  volume={22},
+  number={2},
+  pages={167--187},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{su2015interpretation,
+  title={Interpretation of logical words in Mandarin-speaking children with autism spectrum disorders: Uncovering knowledge of semantics and pragmatics},
+  author={Su, Yi Esther and Su, Lin-Yan},
+  journal={Journal of autism and developmental disorders},
+  volume={45},
+  number={7},
+  pages={1938--1950},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{rohde2014markers,
+  title={Markers of topical discourse in child-directed speech},
+  author={Rohde, Hannah and Frank, Michael C},
+  journal={Cognitive Science},
+  volume={38},
+  number={8},
+  pages={1634--1661},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{katsos2016cross,
+  title={Cross-linguistic patterns in the acquisition of quantifiers},
+  author={Katsos, Napoleon and Cummins, Chris and Ezeizabarrena, Maria-Jos{\'e} and Gavarr{\'o}, Anna and Kraljevi{\'c}, Jelena Kuva{\v{c}} and Hrzica, Gordana and Grohmann, Kleanthes K and Skordi, Athina and De L{\'o}pez, Kristine Jensen and Sundahl, Lone and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={113},
+  number={33},
+  pages={9244--9249},
+  year={2016},
+  publisher={National Acad Sciences}
+}
 
 @article{frank2016using,
   title={Using tablets to collect data from young children},
@@ -58,6 +111,24 @@
  month={Oct}
 }
 
+@book{ambridge2011child,
+  title={Child language acquisition: Contrasting theoretical approaches},
+  author={Ambridge, Ben and Lieven, Elena VM},
+  year={2011},
+  publisher={Cambridge University Press}
+}
+
+@article{matthews2006effect,
+  title={The effect of perceptual availability and prior discourse on young children's use of referring expressions},
+  author={Matthews, Danielle and Lieven, Elena and Theakston, Anna and Tomasello, Michael},
+  journal={Applied Psycholinguistics},
+  volume={27},
+  number={3},
+  pages={403--422},
+  year={2006},
+  publisher={Cambridge University Press}
+}
+
 @article{horowitz2015young,
   title={Young children’s developing sensitivity to discourse continuity as a cue for inferring reference},
   author={Horowitz, Alexandra C and Frank, Michael C},
@@ -79,6 +150,17 @@
   publisher={American Psychological Association}
 }
 
+@article{mareschal2003basic,
+  title={Basic-level category discriminations by 7-and 9-month-olds in an object examination task},
+  author={Mareschal, Denis and Powell, Daisy and Volein, Agnes},
+  journal={Journal of Experimental Child Psychology},
+  volume={86},
+  number={2},
+  pages={87--107},
+  year={2003},
+  publisher={Elsevier}
+}
+
 @article{koymen2014young,
   title={Young children create partner-specific referential pacts with peers.},
   author={K{\"o}ymen, Bahar and Schmerse, Daniel and Lieven, Elena and Tomasello, Michael},
@@ -90,11 +172,14 @@
   publisher={American Psychological Association}
 }
 
-@article{khu2019preschoolers,
+@article{khu2020preschoolers,
   title={Preschoolers Flexibly Shift Between Speakers' Perspectives During Real-Time Language Comprehension},
   author={Khu, Melanie and Chambers, Craig G and Graham, Susan A},
-  journal={Child Development},
-  year={2019},
+  journal={Child development},
+  volume={91},
+  number={3},
+  pages={e619--e634},
+  year={2020},
   publisher={Wiley Online Library}
 }
 
@@ -231,9 +316,22 @@ year = {2019}
 }
 
 
+@incollection{kurumada2009acquisition,
+  title={The acquisition and development of the topic marker wa in L1 Japanese},
+  author={Kurumada, Chigusa},
+  journal={Formulaic language},
+  editor={R. Corrigan, E. A. Moravcsik, H. Ouali, & K. M. Wheatley},
+  volume={2},
+  pages={347--374},
+  year={2009},
+  chapter = 15,
+  publisher={Amsterdam, the Netherlands: John Benjamins}
+}
+
+
 @article{bohn2018common,
   title={Common ground and development},
-  author={Bohn, Manuel and Koymen, Bahar},
+  author={Bohn, Manuel and K{\"o}ymen, Bahar},
   journal={Child Development Perspectives},
   volume={12},
   number={2},
@@ -431,6 +529,17 @@ year = {2019}
   publisher={Cambridge University Press}
 }
 
+@article{bannard2017s,
+  title={What’s worth talking about? Information theory reveals how children balance informativeness and ease of production},
+  author={Bannard, Colin and Rosner, Marla and Matthews, Danielle},
+  journal={Psychological Science},
+  volume={28},
+  number={7},
+  pages={954--966},
+  year={2017},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
 @incollection{landy2011ideal,
   title={Ideal-observer models of cue integration},
   author={Landy, Michael S and Banks, Martin S and Knill, David C},
@@ -463,6 +572,26 @@ year = {2019}
   publisher={Elsevier}
 }
 
+@article{chen2011tuning,
+  title={Tuning information packaging: Intonational realization of topic and focus in child Dutch},
+  author={Chen, Aoju},
+  journal={Journal of Child Language},
+  volume={38},
+  pages={1055--1083},
+  year={2011},
+  publisher={Cambridge University Press.}
+}
+
+@article{de2009experimental,
+  title={Experimental evidence for preschoolers' mastery of “topic”},
+  author={De Cat, C{\'e}cile},
+  journal={Language Acquisition},
+  volume={16},
+  number={4},
+  pages={224--239},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
 
 @article{behne2005one,
   title={One-year-olds comprehend the communicative intentions behind gestures in a hiding game},
@@ -473,6 +602,17 @@ year = {2019}
   pages={492--499},
   year={2005},
   publisher={Wiley Online Library}
+}
+
+@article{matthews2009pronoun,
+  title={Pronoun co-referencing errors: Challenges for generativist and usage-based accounts},
+  author={Matthews, Danielle and Lieven, Elena and Theakston, Anna and Tomasello, Michael},
+  journal={Cognitive Linguistics},
+  volume={20},
+  number={3},
+  pages={599--626},
+  year={2009},
+  publisher={De Gruyter Mouton}
 }
 
 @article{bohn2018social,
@@ -606,6 +746,16 @@ year = {2019}
   publisher={Taylor \& Francis}
 }
 
+@article{bornstein2010development,
+  title={The development of object categorization in young children: Hierarchical inclusiveness, age, perceptual attribute, and group versus individual analyses.},
+  author={Bornstein, Marc H and Arterberry, Martha E},
+  journal={Developmental psychology},
+  volume={46},
+  number={2},
+  pages={350},
+  year={2010},
+  publisher={American Psychological Association}
+}
 
 @incollection{clark1973s,
   title={What's in a word? On the child's acquisition of semantics in his first language},
