--- a/paper/supplementary_material.Rmd
+++ b/paper/supplementary_material.Rmd
@@ -340,7 +340,7 @@ map_model_2 <- tibble(
 p2 <- ggplot() +
   geom_hline(yintercept = 1/3, lty=2, size = 1)+
   geom_jitter(data = pexs_1,aes(x = age_num, y= correct, col = condition), width = .00, height = .01, alpha = .5)+
-  geom_line(data = sample2, aes(x = age, y = y, col = condition, group = sample), size = .025)+
+  geom_line(data = sample2, aes(x = age, y = y, col = condition, group = sample), alpha = .05)+
   geom_line(data = map_model_2, aes(x = age, y = y, col = condition), size = 1)+
   #geom_smooth(data = ex2_data,aes(x = age_num, y= correct, col = condition), method = "glm", method.args = list(family = "binomial"), se = T, alpha = .5, size = 1.5 )+
   geom_pointrange(data = pexs_2, aes(x = age_group+.5, y = mean, ymin = ci_lower, ymax = ci_upper, col = condition),size = .8, position = position_dodge(width = .2), pch = 4)+
@@ -523,7 +523,7 @@ map_con <- tibble(
 
 cp2 <- ggplot() +
   geom_hline(yintercept = 1/3, lty=2)+
-  geom_line(data = con_sample, aes(x = age, y = y, col = Category, group = sample), size = .01, alpha = .5)+
+  geom_line(data = con_sample, aes(x = age, y = y, col = Category, group = sample), alpha = .01)+
   geom_line(data = map_con, aes(x = age, y = y, col = Category), size = 1)+
   #geom_pointrange(data = pex3_2, aes(x = age_group+.5, y = mean, ymin = ci_lower, ymax = ci_upper, col = condition),size = .8, position = position_dodge(width = .2), pch = 4)+
   labs(x="Age",y="Proportion correct")+
